--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
     <groupId>kr.co.fastcampus</groupId>
     <artifactId>springbasic</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
     <name>my-app</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
@@ -25,6 +27,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -55,6 +62,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>springbasic</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -72,7 +80,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>kr.co.fastcampus.Main</mainClass>
+                                    <mainClass>kr.co.fastcampus.cli.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
