톰캣을 메이븐 의존성으로 축가해서 직접 톰켓 실행

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 <!--        <maven.compiler.release>12</maven.compiler.release>-->
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
+        <tomcat.version>8.5.23</tomcat.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -60,6 +61,34 @@
             <artifactId>junit-jupiter-params</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--  임베디드 톰캣 의존성 추가 -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jasper-el</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jsp-api</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>springbasic</finalName>
@@ -80,7 +109,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>kr.co.fastcampus.cli.Main</mainClass>
+                                    <mainClass>kr.co.fastcampus.web.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
